--- a/html/about.html
+++ b/html/about.html
@@ -3,7 +3,8 @@
   <!-- Video Container -->
   <div class="video-container vh-100">
     <video autoplay muted loop>
-      <source ng-src="./media/video/robin.mp4" type="video/mp4">
+      <source ng-src="./media/video/robin.mp4" 
+              type="video/mp4">
     </video>
   </div>
 
@@ -11,7 +12,7 @@
   <!-- Home title -->
   <div class="home">
     <div class="backdrop-filter-element"></div>
-    <div class="home-content" id="sda">
+    <div class="home-content">
       <h1 id="abut">EcoGourmet</h1>
       <i ng-click="scrollTo('scroll')"
          class="fa-solid fa-chevron-down fa-bounce cursor-pointer" 
@@ -21,18 +22,27 @@
 
 
   <!-- Content after video -->
-  <section class="hidden" id="scroll" style="scroll-margin-top:50px;">
-    <div class="container" ng-repeat="aboutUsText in aboutUsTexts">
+  <section class="hidden" id="scroll" 
+           style="scroll-margin-top:50px;">
+    <div class="container" 
+         ng-repeat="aboutUsText in aboutUsTexts">
       <div class="row gx-5 align-items-center">
-        <div class="col-lg-6" ng-class="{ 'order-lg-2': $first || $index === 2 }">
+        <div class="col-lg-6" 
+             ng-class="{ 'order-lg-2': $first || $index === 2 }">
           <div class="p-5">
-            <img class="img-fluid rounded-circle" ng-src="{{ aboutUsText.image }}" alt="..." />
+            <img class="img-fluid rounded-circle" 
+                 ng-src="{{ aboutUsText.image }}"/>
           </div>
         </div>
-        <div class="col-lg-6" ng-class="{ 'order-lg-1': $first && $index !== 2 }">
+        <div class="col-lg-6" 
+             ng-class="{ 'order-lg-1': $first && $index !== 2 }">
           <div class="p-5">
-            <h2 class="display-4">{{ 'about_title_' + ($index + 1) | translate:lang.data }}</h2>
-            <p>{{ 'about_text_' + ($index + 1) | translate:lang.data }}</p>
+            <h2 class="display-4">
+              {{ 'about_title_' + ($index + 1) | translate:lang.data }}
+            </h2>
+            <p>
+              {{ 'about_text_' + ($index + 1) | translate:lang.data }}
+            </p>
           </div>
         </div>
       </div>
@@ -44,17 +54,22 @@
   <section class="bg-light py-5 hidden">
     <div class="container my-5">
       <div class="text-center mb-5">
-        <h2 class="fw-bolder">{{ 'abut_pricing_title' | translate:lang.data }}</h2>
+        <h2 class="fw-bolder">
+          {{ 'abut_pricing_title' | translate:lang.data }}
+        </h2>
       </div>
       <div class="row gx-5 justify-content-center">
-        <div class="col-lg-4 mb-5" ng-repeat="plan in subscription_plans">
+        <div class="col-lg-4 mb-5" 
+             ng-repeat="plan in subscription_plans">
           <div class=" h-100">
             <div class="p-5">
               <div class="small text-uppercase fw-bold text-muted"></div>
               <ul class="list-unstyled mb-4">
                 <li class="mb-2">
                   <i class="bi bi-check text-primary"></i>
-                  <strong>{{plan.nev}}</strong>
+                  <strong>
+                    {{plan.nev}}
+                  </strong>
                 </li>
                 <li class="mb-2">
                   <i class="bi bi-check text-primary"></i>
@@ -65,7 +80,11 @@
           </div>
         </div>
         <div class="col-lg-4 mb-5">
-          <button type="button" ui-sref="products" class="btn btn-primary px-4 me-md-2">{{ 'DISCOVER_MORE' | translate:lang.data }}</button>
+          <button type="button" 
+                  ui-sref="products" 
+                  class="btn btn-primary px-4 me-md-2">
+          {{ 'DISCOVER_MORE' | translate:lang.data }}
+        </button>
         </div>
         <h3 class="small col-lg-7">
           {{('plans') | translate:lang.data}}
@@ -80,11 +99,11 @@
       <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
         <div class="col-10 col-sm-8 col-lg-6">
           <img ng-src="./media/image/about_us/hero_cooking.jpeg" 
-          class="d-block mx-lg-auto img-fluid rounded-3" 
-          alt="Bootstrap Themes" 
-          width="700" 
-          height="500" 
-          loading="lazy">
+               class="d-block mx-lg-auto img-fluid rounded-3" 
+               alt="Bootstrap Themes" 
+               width="700" 
+               height="500" 
+               loading="lazy">
         </div>
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">
@@ -94,7 +113,11 @@
           {{('Menu_text_1') | translate:lang.data}}
           </p>
           <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-            <button type="button" ui-sref="services" class="btn btn-primary btn-lg px-4 me-md-2">{{ 'DISCOVER_MORE' | translate:lang.data }}</button>
+            <button type="button" 
+                    ui-sref="services" 
+                    class="btn btn-primary btn-lg px-4 me-md-2">
+              {{ 'DISCOVER_MORE' | translate:lang.data }}
+            </button>
           </div>
         </div>
       </div>
@@ -102,30 +125,40 @@
   </section>
 
 
-  <!-- Testimonials angularositot-->
-  <section class="testimonials text-center bg-light hidden py-5">
-    <div class="container-fluid">
-      <h2 class="mb-5 fw-bolder">{{ 'testimonial_title'| translate:lang.data }}</h2>
-      <div class="row">
-        <div class="col-lg-4" ng-repeat="testimonial in testimonials.slice(0, 3)">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0" style="max-inline-size: 50ch;">
-            <div class="circle overflow-hidden mx-auto" style="width: 150px; height: 150px;">
-              <img class="img-fluid circle mb-3" style="border-radius: 50%;" ng-src="{{ testimonial.kep_url }}" alt="..." />
+    <!-- Testimonials angularositot-->
+    <section class="testimonials text-center bg-light hidden py-5">
+      <div class="container-fluid">
+        <h2 class="mb-5 fw-bolder">
+          {{ 'testimonial_title'| translate:lang.data }}
+        </h2>
+        <div class="row">
+          <div class="col-lg-4" 
+               ng-repeat="testimonial in testimonials.slice(0, 3)">
+            <div class="testimonial-item mx-auto mb-5 mb-lg-0" 
+                 style="max-inline-size: 50ch;">
+              <div class="circle overflow-hidden mx-auto" 
+                   style="width: 150px; height: 150px;">
+                <img class="img-fluid circle mb-3" 
+                     style="border-radius: 50%;" 
+                     ng-src="{{ testimonial.kep_url }}"/>
+              </div>
+              <h5 class="mt-6 text-center py-3">
+                {{ testimonial.name }}
+              </h5>
+              <p class="font-weight-light mt-6">
+                {{ 'testimonial_desc_'  + ($index + 1) | translate:lang.data }}
+              </p>
             </div>
-            <h5 class="mt-6 text-center py-3">{{ testimonial.name }}</h5>
-            <p class="font-weight-light mt-6">{{ 'testimonial_desc_'  + ($index + 1) | translate:lang.data }}</p>
           </div>
         </div>
-      </div>
-      <!-- scroll to top button -->
-      <div class="scroll-to-top text-right bg-light" 
-           ng-click="scrollTo('scroll')">
-        <span class="arrow-up small">
-          <i class="fas fa-thin fa-arrow-up fa-bounce"></i>
-        </span>
-      </div>
-    </div>
-  </section>
 
-</div>
-</div>
+        <!-- scroll to top button -->
+        <div class="scroll-to-top text-right bg-light" 
+             ng-click="scrollTo('scroll')">
+          <span class="arrow-up small">
+            <i class="fas fa-thin fa-arrow-up fa-bounce"></i>
+          </span>
+        </div>
+      </div>
+    </section>
+  </div>
