--- a/html/landing.html
+++ b/html/landing.html
@@ -4,7 +4,7 @@
 
     <!-- Slider image -->
     <div class="slider-image slider-image-{{$index+1}} vh-100 bg-img bg-img-cover" 
-        style="background-image:url('./media/image/food{{$index+1}}.jpg');">
+        style="background-image:url('./media/image/food{{$index+1}}.jpeg');">
         
       <!-- Slider content -->
       <div class="slider-text position-absolute text-white p-3">
